# django_extended_accounts_api

./: README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
coverage/: .coverage
django_extended_accounts_api/: asgi.py  celery.py  get_csrf_token.py  settings.py  urls.py  wsgi.py
extended_accounts_api/: apps.py  urls.py
extended_accounts_api/helpers/: __init__.py  account_serializer.py  account_serializers.py  password_serializers.py  tasks.py
extended_accounts_api/helpers/tests/: test_account_serializers.py  test_login_serializer.py  test_password_serializers.py  test_permissions.py  test_tasks.py
extended_accounts_api/integration/: tests_integration_celery_post_save_account_signal.py
extended_accounts_api/models/: Account.py
extended_accounts_api/models/tests/: test_account.py  test_profile.py
extended_accounts_api/signals/: post_delete_profile_model.py  post_save_account_model.py  post_save_profile_model.py  pre_save_profile_model.py
extended_accounts_api/signals/tests/: test_post_delete_profile_model.py  test_post_save_profile_model.py  test_pre_save_profile_model.py
extended_accounts_api/views/: AccountConfirmation.py  Accounts.py  ChangePassword.py  Login.py  Logout.py  ResetPassword.py  __init__.py
extended_accounts_api/views/tests/: test_account_confirmation.py  test_accounts.py  test_change_password.py  test_login.py  test_logout.py  test_reset_password.py
